--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ Content/Resources/*
 Content/Movies/*
 Content/DEV/*
 Content/MetaHumans*
+Content/MSPresets*
+Content/Megascans*
 
 # Precompiled Assets
 SourceArt/**/*.png
