--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Resources/Maps/TestMap.TestMap
+GameDefaultMap=/Game/Immersion_game/UI/Menu/Maps/StartMap.StartMap
 EditorStartupMap=/Game/Resources/Maps/TestMap.TestMap
+ServerDefaultMap=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -41,13 +42,14 @@ AppliedDefaultGraphicsPerformance=Maximum
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.GPUSkin.Support16BitBoneIndex=True
 r.GPUSkin.UnlimitedBoneInfluences=True
 r.SkinCache.CompileShaders=True
 r.SkinCache.DefaultBehavior=0
 SkeletalMesh.UseExperimentalChunking=1
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
