--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/Immersion_game/UI/Menu/Maps/StartMap.StartMap
 EditorStartupMap=/Game/Resources/Maps/TestMap.TestMap
 ServerDefaultMap=None
+GameInstanceClass=/Script/Engine.GameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
