--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=83FF0D7D4EE85D64963610A366BF4C47
+ProjectName=Neskuchny Sad
+CompanyName=Immersion
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
@@ -102,4 +104,10 @@ bSkipMovies=False
 PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=()
 PerPlatformBuildTarget=()
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=True
+bMoviesAreSkippable=True
++StartupMovies=Intro
++StartupMovies=UE_moving_logo_v01_4k
 
