Ебаный рот этого казино блять

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Immersion_game/UI/Menu/Maps/StartMap.StartMap
-EditorStartupMap=/Game/Resources/Maps/TestMap.TestMap
+EditorStartupMap=/Game/Resources/Maps/MainMap.MainMap
 ServerDefaultMap=None
 GameInstanceClass=/Script/Engine.GameInstance
 
