--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,7 +10,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="F:/Builds/GameJam/Test/Windows")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -95,14 +95,14 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="TestMap")
++MapsToCook=(FilePath="MainMap")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
-PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=()
+PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
+PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
 [/Script/MoviePlayer.MoviePlayerSettings]
